--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.2.14",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.2.14",
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.1",
     "express": "^5.1.0",
+    "ngx-monaco-editor-v2": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
