--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               },
               {
                 "glob": "**/*",
-                "input": "node_modules/ngx-monaco-editor-v2/assets",
-                "output": "./assets/monaco/"
+                "input": "node_modules/monaco-editor/min/vs",
+                "output": "assets/monaco/vs"
               }
             ],
             "styles": [
