--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.1",
     "express": "^5.1.0",
+    "monaco-editor": "^0.55.1",
     "ngx-monaco-editor-v2": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
